# bling-erp-mcp-server

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  bling-openapi-reference.md  docker-compose.yml  pyproject.toml
bling_mcp/: __init__.py  __main__.py  config.py
bling_mcp/bling_auth/: oauth.py  tokens.py
bling_mcp/mcp/: __init__.py  app.py  dependencies.py  resource_store.py  tool_helpers.py  tool_models.py
bling_mcp/mcp/prompts/: assistant.py
bling_mcp/mcp/resources/: __init__.py  config.py
bling_mcp/mcp/tools/: __init__.py  bling_auth.py  clientes.py  estoque.py  notas.py  openapi.py  pedidos.py  produtos.py
bling_mcp/ui/: server.py  wizard.py
bling_mcp/ui/static/: wizard.css
bling_mcp/ui/templates/: wizard.html
bling_mcp/utils/: bling_client.py  logger.py  openapi_search.py  params.py
bling_mcp/utils/views/: __init__.py  produto.py
tests/: __init__.py  conftest.py  test_dependencies.py  test_tool_helpers.py
tests/tools/: test_bling_auth.py  test_clientes.py  test_estoque.py  test_notas.py  test_openapi.py  test_pedidos.py  test_produtos.py
